# MultiAgent-Startup-Chatbot

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
ai/: .env.example  README.md  pyproject.toml
ai/src/ai_core/: __init__.py  config.py  workflow.py
ai/src/ai_core/agents/: __init__.py  factory.py  registry.py
ai/src/ai_core/graphs/: __init__.py  nodes.py  startup_research.py  state.py
ai/src/ai_core/memory/: __init__.py  checkpointer.py
ai/src/ai_core/models/: __init__.py  factory.py
ai/src/ai_core/prompts/: __init__.py  loader.py
ai/src/ai_core/prompts/agents/: competitor_analysis.yaml  customer_research.yaml  market_research.yaml  marketing_strategy.yaml  product_strategy.yaml  report_writer.yaml  risk_analysis.yaml  supervisor.yaml
ai/src/ai_core/prompts/workflows/: startup_research.yaml
ai/src/ai_core/schemas/: __init__.py  events.py
ai/src/ai_core/streaming/: __init__.py  context.py
ai/src/ai_core/tools/: __init__.py  calculator.py  registry.py  web_search.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: conversations.py  health.py  ws.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  conversation.py  run.py
backend/app/schemas/: conversation.py
backend/app/services/: research_service.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityFeed.tsx  AgentCard.tsx  ChatPanel.tsx  Header.tsx  (+3 more)
(+4 files in other folders)
