[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-core"
version = "0.1.0"
description = "Multi-agent startup research engine built on LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3,<2",
    "langgraph>=1.2,<2",
    "langchain-openai>=1.3,<2",
    "langchain-anthropic>=1.4,<2",
    "langchain-google-genai>=4.2,<5",
    "python-dotenv>=1.0",
    "langgraph-checkpoint-postgres>=3.1,<4",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "pyyaml>=6.0",
    "ddgs>=9.14",
    "langchain-tavily>=0.2",
    "psycopg[binary]>=3.3",
    "psycopg-pool>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_core"]
