[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "startup-research-backend"
version = "0.1.0"
description = "FastAPI backend for the multi-agent startup research assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139,<1",
    "uvicorn[standard]>=0.49,<1",
    "sqlalchemy[asyncio]>=2.0.51,<3",
    # asyncpg (not psycopg) because psycopg async requires a selector event
    # loop, which Windows' default ProactorEventLoop is not.
    "asyncpg>=0.31",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    # plus the local ai engine: pip install -e ../ai (see root README)
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
